# eiderFLAT

./: Cargo.toml  README.md
apps/eiderflat_app/: Cargo.toml
crates/eiderflat_boolean/: Cargo.toml
crates/eiderflat_boolean/src/: boolean_ops.rs  clip.rs
crates/eiderflat_cad/: Cargo.toml
crates/eiderflat_cad/src/: edit.rs  grips.rs  hatch.rs  infer.rs  inquiry.rs  lib.rs  selection.rs  snap.rs
crates/eiderflat_document/: Cargo.toml
crates/eiderflat_document/src/: dimension.rs  document.rs  entity.rs  layer.rs  lib.rs  properties.rs
crates/eiderflat_geometry/: Cargo.toml
crates/eiderflat_geometry/src/: lib.rs  transform.rs  util.rs
crates/eiderflat_geometry/src/ops/: distance.rs  intersect.rs  mod.rs
crates/eiderflat_io/: Cargo.toml
crates/eiderflat_io/src/: dim.rs  dxf.rs  lib.rs  native.rs  svg.rs
crates/eiderflat_spatial/: Cargo.toml
crates/eiderflat_spatial/src/: quadtree.rs
crates/eiderflat_ui/: Cargo.toml
crates/eiderflat_ui/src/: command.rs  fonts.rs  icons.rs  state.rs  theme.rs  tools.rs  view.rs
crates/eiderflat_ui/src/state/: contextual.rs  modify.rs
crates/eiderflat_ui/src/view/: chrome.rs  overlays.rs  palette.rs  render.rs  tessellate.rs
crates/eiderflat_ui/tests/: modify_tools.rs
