[package]
name = "eiderflat_app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "eiderflat"
path = "src/main.rs"

[dependencies]
eiderflat_geometry.workspace = true
eiderflat_ui.workspace = true
eframe = { workspace = true, features = ["persistence"] }

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[lints]
workspace = true
