[package]
publish = false
name = "eiderflat_cad"
version = "0.1.4-alpha"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
eiderflat_geometry = { path = "../eiderflat_geometry" }
eiderflat_document = { path = "../eiderflat_document" }
eiderflat_boolean = { path = "../eiderflat_boolean" }
