[package]
publish = false
name = "eiderflat_ui"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
eiderflat_geometry   = { path = "../eiderflat_geometry" }
eiderflat_document   = { path = "../eiderflat_document" }
eiderflat_cad        = { path = "../eiderflat_cad" }
eiderflat_io         = { path = "../eiderflat_io" }
egui = "0.34"
rfd = "0.17"
fontdb = "0.23"
ttf-parser = "0.25"
resvg = { version = "0.47", default-features = false }
