[package]
name = "eiderflat_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
eiderflat_geometry.workspace = true
eiderflat_document.workspace = true
eiderflat_cad.workspace = true
eiderflat_io.workspace = true
egui.workspace = true
rfd.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
resvg.workspace = true

[lints]
workspace = true
